# cmake

t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
